Sforce8 Project Data/src/objects/Room__c.object
<CustomObject>
    <description>客室と宴会場などを定義</description>
    <fields>
        <fullName>Area__c</fullName>
        <label>場所</label>
        <picklist>
            <picklistValues>
                <fullName>本館</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>別館</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Basu__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>大理石風呂付きの場合チェックしてください</inlineHelpText>
        <label>大理石風呂</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BranchShopName__c</fullName>
        <label>支店</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CapacityHaku__c</fullName>
        <label>定員 宿泊</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>定員 食事</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field10__c</fullName>
        <label>定員 会議</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <formula>Rank__r.Field4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>貸切露天風呂</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>夕料理[正月]</label>
        <referenceTo>FoodMenu__c</referenceTo>
        <relationshipLabel>お部屋</relationshipLabel>
        <relationshipName>room9ZQJ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <label>フロア</label>
        <picklist>
            <picklistValues>
                <fullName>1F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <externalId>true</externalId>
        <label>室商品ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LAN__c</fullName>
        <label>有線LAN</label>
        <picklist>
            <picklistValues>
                <fullName>○</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lat__c</fullName>
        <label>Lat</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Left__c</fullName>
        <label>Left</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lng__c</fullName>
        <label>Lng</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nosmoking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>チェックありで禁煙とする</description>
        <label>禁煙</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentRoomRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>宴会場は分ける利用したい場合、分けている場所の親部屋は設定が必要</inlineHelpText>
        <label>親部屋</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>お部屋</relationshipLabel>
        <relationshipName>ParentRoomRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rank_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客室Rank[II]</label>
        <referenceTo>Rank__c</referenceTo>
        <relationshipLabel>お部屋 (客室Rank[II])</relationshipLabel>
        <relationshipName>roomjGWY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rank_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客室Rank[III]</label>
        <referenceTo>Rank__c</referenceTo>
        <relationshipLabel>お部屋 (客室Rank[III])</relationshipLabel>
        <relationshipName>rommjGWi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rank_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客室Rank[IV]</label>
        <referenceTo>Rank__c</referenceTo>
        <relationshipLabel>お部屋 (客室Rank[IV])</relationshipLabel>
        <relationshipName>roomjGWn</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客室Rank[I]</label>
        <referenceTo>Rank__c</referenceTo>
        <relationshipLabel>お部屋</relationshipLabel>
        <relationshipName>RoomjE84</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rnumber__c</fullName>
        <externalId>true</externalId>
        <label>R#</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RoomName__c</fullName>
        <label>室名</label>
        <picklist>
            <picklistValues>
                <fullName>横笛</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>蝴蝶</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>鈴虫</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>夕霧１</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>伊勢</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>槿</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>早蕨</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>初花</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>浮舟</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>夕霧２</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>須磨</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>野分</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>篝火</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>若紫</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>桐壺</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>梅枝</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>菊</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>松風</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>橘</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>牡丹</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>扇</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>藤</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>竹河</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>賑い亭</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>平安</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>狩鞍庵</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>源氏館</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>館外</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Seq__c</fullName>
        <inlineHelpText>予定表レポートの表示順序</inlineHelpText>
        <label>Seq#</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tier123__c</fullName>
        <formula>IF (  Rank__r.Tier1c__c , &quot;Tier1&quot;, IF (Rank__r.Tier2c__c, &quot;Tier2&quot;,IF (Rank__r.Tier3c__c,&quot;Tier3&quot;,IF(Rank__r.Tier4c__c,&quot;Tier4&quot;,IF(Rank__r.Tier5c__c,&quot;Tier5&quot;,IF(Rank__r.Tier6c__c,&quot;Tier6&quot;,IF(Rank__r.Tier7c__c,&quot;Tier7&quot;,IF(Rank__r.Tier8c__c,&quot;Tier8&quot;,&quot;&quot;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>現在のTier Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top__c</fullName>
        <label>Top</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeRoomRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>部屋タイプ</label>
        <referenceTo>TypeOfRooms__c</referenceTo>
        <relationshipLabel>お部屋</relationshipLabel>
        <relationshipName>TypeRoomRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UseOfRoom__c</fullName>
        <label>UseOfRoom</label>
        <picklist>
            <picklistValues>
                <fullName>客室</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>広間</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>レストラン</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>宴会場</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1Henn__c</fullName>
        <formula>Rank__r.X1H__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>延長料[1H]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1_Person_5__c</fullName>
        <formula>ROUND(IF (Rank_2__r.Tier1c__c, Rank_2__r.Tier1__c + Rank_2__r.Field3__c , IF (Rank_2__r.Tier2c__c, Rank_2__r.Tier2__c + Rank_2__r.Field3__c, IF(Rank_2__r.Tier3c__c, Rank_2__r.Tier3__c + Rank_2__r.Field3__c,IF(Rank_2__r.Tier4c__c, Rank_2__r.Tier4__c + Rank_2__r.Field3__c,IF(Rank_2__r.Tier5c__c, Rank_2__r.Tier5__c + Rank_2__r.Field3__c,IF(Rank_2__r.Tier6c__c, Rank_2__r.Tier6__c + Rank_2__r.Field3__c,IF(Rank_2__r.Tier7c__c, Rank_2__r.Tier7__c + Rank_2__r.Field3__c,IF(Rank_2__r.Tier8c__c, Rank_2__r.T8__c + Rank_2__r.Field3__c,0))))))))+499,-3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1 Person[V]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1_Person_6__c</fullName>
        <formula>ROUND(IF (Rank_2__r.Tier1c__c, Rank_3__r.Tier1__c + Rank_3__r.Field3__c , IF (Rank_3__r.Tier2c__c, Rank_3__r.Tier2__c + Rank_3__r.Field3__c, IF(Rank_3__r.Tier3c__c, Rank_3__r.Tier3__c + Rank_3__r.Field3__c,IF(Rank_3__r.Tier4c__c, Rank_3__r.Tier4__c + Rank_3__r.Field3__c,IF(Rank_3__r.Tier5c__c, Rank_3__r.Tier5__c + Rank_3__r.Field3__c,IF(Rank_3__r.Tier6c__c, Rank_3__r.Tier6__c + Rank_3__r.Field3__c,IF(Rank_3__r.Tier7c__c, Rank_3__r.Tier7__c + Rank_3__r.Field3__c,IF(Rank_3__r.Tier8c__c, Rank_3__r.T8__c + Rank_3__r.Field3__c,0))))))))+499,-3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1 Person[VI]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1_Person_7__c</fullName>
        <formula>ROUND(IF (Rank_4__r.Tier1c__c, Rank_4__r.Tier1__c + Rank_4__r.Field3__c , IF (Rank_4__r.Tier2c__c, Rank_4__r.Tier2__c + Rank_4__r.Field3__c, IF(Rank_4__r.Tier3c__c, Rank_4__r.Tier3__c + Rank_4__r.Field3__c,IF(Rank_4__r.Tier4c__c, Rank_4__r.Tier4__c + Rank_4__r.Field3__c,IF(Rank_4__r.Tier5c__c, Rank_4__r.Tier5__c + Rank_4__r.Field3__c,IF(Rank_4__r.Tier6c__c, Rank_4__r.Tier6__c + Rank_4__r.Field3__c,IF(Rank_4__r.Tier7c__c, Rank_4__r.Tier7__c + Rank_4__r.Field3__c,IF(Rank_4__r.Tier8c__c, Rank_4__r.T8__c + Rank_4__r.Field3__c,0))))))))+499,-3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1 Person[VII]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1_Person_VIII__c</fullName>
        <formula>ROUND( X1_Person_8__c  + heyadashiryouryou__c + Field12__r.Currency__c + Field13__r.Currency__c +499,-3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1 Person[VIII]++</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1_Person_VII__c</fullName>
        <formula>ROUND(X1_Person_7__c + heyadashiryouryou__c   + Field12__r.Currency__c  +  Field13__r.Currency__c +499,-3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1 Person[VII]++</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1_Person__c</fullName>
        <formula>ROUND(IF (Rank__r.Tier1c__c,  Rank__r.Tier1__c + Rank__r.Field3__c , IF (Rank__r.Tier2c__c,  Rank__r.Tier2__c  + Rank__r.Field3__c, IF(Rank__r.Tier3c__c,  Rank__r.Tier3__c  + Rank__r.Field3__c,IF(Rank__r.Tier4c__c,  Rank__r.Tier4__c  + Rank__r.Field3__c,IF(Rank__r.Tier5c__c,  Rank__r.Tier5__c  + Rank__r.Field3__c,IF(Rank__r.Tier6c__c,  Rank__r.Tier6__c  + Rank__r.Field3__c,IF(Rank__r.Tier7c__c,  Rank__r.Tier7__c  + Rank__r.Field3__c,IF(Rank__r.Tier8c__c,   Rank__r.T8__c   + Rank__r.Field3__c,0))))))))+499,-3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1 Person[IV]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2_Person_VIII__c</fullName>
        <formula>ROUND( X2_Person_8__c  + heyadashiryouryou__c/2 + Field12__r.Currency__c + Field13__r.Currency__c +499,-3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2 Person[VIII]++</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2_Person_VII__c</fullName>
        <formula>ROUND( X2_Person_7__c  + heyadashiryouryou__c/2 + Field12__r.Currency__c + Field13__r.Currency__c +499,-3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>サービス料は部屋毎で人数ではありません。</inlineHelpText>
        <label>2 Person[VII]++</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2_Person__c</fullName>
        <formula>ROUND(IF (Rank__r.Tier1c__c, Rank__r.Tier1__c/2 + Rank__r.Field3__c , IF (Rank__r.Tier2c__c, Rank__r.Tier2__c/2 + Rank__r.Field3__c, IF(Rank__r.Tier3c__c, Rank__r.Tier3__c/2 + Rank__r.Field3__c,IF(Rank__r.Tier4c__c, Rank__r.Tier4__c/2 + Rank__r.Field3__c,IF(Rank__r.Tier5c__c, Rank__r.Tier5__c/2 + Rank__r.Field3__c,IF(Rank__r.Tier6c__c, Rank__r.Tier6__c/2 + Rank__r.Field3__c,IF(Rank__r.Tier7c__c, Rank__r.Tier7__c/2 + Rank__r.Field3__c,IF(Rank__r.Tier8c__c, Rank__r.T8__c/2 + Rank__r.Field3__c,0))))))))+499,-3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2 Person[IV]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3H__c</fullName>
        <formula>Rank__r.X3H__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>貸切料[3H]昼</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3Hyoru__c</fullName>
        <formula>Rank__r.X3Hyu__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>貸切料[3H]夜</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3_Person_VIII__c</fullName>
        <formula>ROUND( X3_Person_8__c + heyadashiryouryou__c/3 + Field12__r.Currency__c + Field13__r.Currency__c +499,-3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3 Person[VIII]++</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3_Person_VII__c</fullName>
        <formula>ROUND( X3_Person_7__c  + heyadashiryouryou__c/3 + Field12__r.Currency__c + Field13__r.Currency__c +499,-3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3 Person[VII]++</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3_Person__c</fullName>
        <formula>ROUND(IF (Rank__r.Tier1c__c, Rank__r.Tier1__c/3 + Rank__r.Field3__c , IF (Rank__r.Tier2c__c, Rank__r.Tier2__c/3 + Rank__r.Field3__c, IF(Rank__r.Tier3c__c, Rank__r.Tier3__c/3 + Rank__r.Field3__c,IF(Rank__r.Tier4c__c, Rank__r.Tier4__c/3 + Rank__r.Field3__c,IF(Rank__r.Tier5c__c, Rank__r.Tier5__c/3 + Rank__r.Field3__c,IF(Rank__r.Tier6c__c, Rank__r.Tier6__c/3 + Rank__r.Field3__c,IF(Rank__r.Tier7c__c, Rank__r.Tier7__c/3 + Rank__r.Field3__c,IF(Rank__r.Tier8c__c, Rank__r.T8__c/3 + Rank__r.Field3__c,0))))))))+499,-3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3 Person[IV]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>centreLat__c</fullName>
        <formula>Lat__c  - (Height__c /2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>centreLat</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>centreLng__c</fullName>
        <formula>Lng__c + (  Width__c  /2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>centreLng</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>furo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>風呂</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>heyadashiryou__c</fullName>
        <label>サービス料[通常]</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>heyadashiryouryou__c</fullName>
        <label>サービス料[正月]</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>kakuzuke__c</fullName>
        <label>格付</label>
        <picklist>
            <picklistValues>
                <fullName>D</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>priority__c</fullName>
        <label>自動割当優先順位</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>roomimage__c</fullName>
        <label>イメージ</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rotenburo__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>露天風呂付きの場合、チェックしてください</inlineHelpText>
        <label>露天風呂</label>
        <type>Checkbox</type>
    </fields>
    <label>お部屋</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Seq__c</columns>
        <columns>TypeRoomRef__c</columns>
        <columns>Floor__c</columns>
        <columns>NAME</columns>
        <columns>Field19__c</columns>
        <columns>kakuzuke__c</columns>
        <columns>UseOfRoom__c</columns>
        <columns>CapacityHaku__c</columns>
        <columns>Capacity__c</columns>
        <columns>Rnumber__c</columns>
        <columns>BranchShopName__c</columns>
        <columns>ParentRoomRef__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>お部屋</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I10000000O5nYEAS_00N10000001oa3JEAQ</fullName>
        <active>true</active>
        <field>TimeassinCustomObject2__c.Field2__c</field>
        <filterItems>
            <field>Room__c.UseOfRoom__c</field>
            <operation>equals</operation>
            <value>Time</value>
        </filterItems>
        <infoMessage>ご利用されるサービスを選択してください</infoMessage>
        <isOptional>false</isOptional>
        <name>時間割り_ご利用</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01Id0000000mT0UEAU_00Nd0000003t8K6EAI</fullName>
        <active>true</active>
        <field>Lead__c.Rroom__c</field>
        <filterItems>
            <field>Room__c.TypeRoomRef__c</field>
            <operation>equals</operation>
            <valueField>$Source.refTypeOfRooms__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>ご予約_部屋</name>
        <sourceObject>Lead__c</sourceObject>
    </namedFilters>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>